--- a/basics/index.html
+++ b/basics/index.html
@@ -58,7 +58,7 @@ var app = new Vue({
     el: '#page-container',
     data: {
         title: 'Demo-1 home page',
-        list: ["a", "b", "c"],
+        list: ["a", "b", "c", "d"],
         comics: 'comics',
         show: true
     }
